# telegram-feed

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  RUNBOOK-prod.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  бизнес-требования.md
backend/: Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_post_tg_grouped_id.py  0002_private_invite_queue.py  0003_channel_photo_storage_key.py  0004_private_invite_queue.py  0005_channels_invite_hash.py  0005_user_catalog_hidden.py  0006_media_video_storage_key.py  0007_media_uniq_tg_file_id.py  0007_media_unique_post_id_tg_file_id.py  0008_user_catalog_hidden.py  0009_channels_hidden.py  0010_user_read_posts.py  0011_channel_backfill_state.py  0012_channel_categories.py
backend/scripts/: backfill_last_days.py  backfill_text_html.py  create_admin.py  merge_existing_albums.py
backend/src/api/: channel_photo.py  deps.py  errors.py  jwt_admin.py  main.py  pagination.py  parse_source_input.py  presign.py  rate_limit.py
backend/src/ingester/: approval_poller.py  backfill.py  backfill_channel_photos.py  backfill_text_html.py  history_backfill.py  join_worker.py  last_days_backfill.py  live.py  main.py  merge_existing_albums.py  normalize.py  photos.py  refcount_sweep.py  session.py  text_html.py
backend/src/shared/: categories.py  config.py  db.py  logging.py  redis_client.py  storage.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_admin_actions.py  test_models.py  (+29 more)
(+226 files in other folders)
