[tool.poetry]
name = "telegram-feed-backend"
version = "0.1.0"
description = "Telegram Feed MVP — FastAPI API + Telethon ingester"
authors = ["supperik <mr.niki234@mail.ru>"]
readme = "../README.md"
packages = [{ include = "shared", from = "src" }, { include = "api", from = "src" }, { include = "ingester", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.32" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.9"
pydantic-settings = "^2.6"
structlog = "^24.4"
telethon = "^1.36"
python-socks = { extras = ["asyncio"], version = "^2.5" }
redis = { extras = ["hiredis"], version = "^5.1" }
minio = "^7.2"
argon2-cffi = "^23.1"
pyjwt = "^2.9"
pyotp = "^2.9"
qrcode = { extras = ["pil"], version = "^7.4" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
httpx = "^0.27"
pytest-docker = "^3.1"
testcontainers = { extras = ["postgres", "redis", "minio"], version = "^4.8" }
ruff = "^0.7"
mypy = "^1.13"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires docker (Postgres/Redis/MinIO)",
    "smoke: end-to-end smoke through FastAPI TestClient",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
